feat: 多 GitHub 代理 + 自动 fallback 功能
核心改进：
- 支持配置多个代理节点（最多 5 个），按优先级自动 fallback
- 单个代理失败自动尝试下一个，最大化下载成功率
- 列表管理：添加、删除、上下移动优先级
- 批量测速显示每个节点延迟
- 保存到 /data/github_proxy.txt（多行格式）

后端新增：
- GitHubProxyService.downloadWithFallback(): 核心 fallback 逻辑
- GitHubProxyService.saveProxyListToFile(): 多行格式保存
- GitHubProxyService.readProxyListFromFile(): 多行格式读取
- /api/settings/github-proxy/list: GET/POST 代理列表接口

前端改进：
- 表格形式展示代理列表（优先级 + 地址 + 测速结果）
- 添加代理对话框（选择预设或自定义输入）
- 上移/下移调整优先级
- 批量测速按钮
- 独立的保存按钮

限制：
- 最多配置 5 个代理节点（MAX_PROXY_COUNT）
- 下载时最多尝试 5 个代理（避免过长等待）

向后兼容：
- 保留 saveToFile()/readFromFile() 单代理接口
- 保留 github_proxy setting 处理逻辑

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>